neuvector-fed.yml
apiVersion: v1
kind: Service
metadata:
  name: neuvector-service-controller-fed-master
spec:
  ports:
  - port: 11443
    name: fed
    protocol: TCP
  type: ClusterIP
  selector:
    app: neuvector-controller-pod
