neuvector-restapi.yml
apiVersion: v1
kind: Service
metadata:
  name: neuvector-service-rest
spec:
  ports:
    - port: 10443
      name: controller
      protocol: TCP
  type: ClusterIP
  selector:
    app: neuvector-controller-pod
