neuvector-ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: cattle-neuvector-system
spec:
  stripPrefix:
    prefixes:
      - /api
      - /fedmanaged

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    cert-manager.io/cluster-issuer: le-traefik
  name: neuvector-ingress
  namespace: cattle-neuvector-system
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`rajesh-nv.do.support.rancher.space`)  
    kind: Rule
    services:
      - name: neuvector-service-webui
        passHostHeader: true
        port: 8443
        scheme: https
  - match: Host(`rajesh-nv.do.support.rancher.space`) && PathPrefix(`/api`)
    kind: Rule
    services:
      - name: neuvector-service-rest
        port: 10443
        scheme: https
  - match: Host(`rajesh-nv.do.support.rancher.space`) && PathPrefix(`/fedmanaged`)
    kind: Rule
    services:
      - name: neuvector-service-controller-fed-master
        port: 11443
        scheme: https
    middlewares:
      - name: stripprefix


  tls:
    secretName: rajesh-nv.do.support.rancher.space-tls
