nginx-ingress.yml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    cert-manager.io/cluster-issuer: le-traefik
  name: nginx
  namespace: test
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rajesh-nv.do.support.rancher.space`) && PathPrefix(`/nginx`)
      kind: Rule
      services:
        - name: nginx
          namespace: test
  tls:
    secretName: rajesh-nv.do.support.rancher.space-tls
